cluster/apps/etc/my-spotify/deployment-and-svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify-backend
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: your-spotify-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify-backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: your-spotify-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: your-spotify-backend
    spec:
      containers:
        - image: yooooomi/your_spotify_server
          name: express-mongo
